fixed properties slick carousel, changed images, adjusted css selectors spacing

--- a/Stated/stated.css
+++ b/Stated/stated.css
@@ -25,14 +25,11 @@ body{
     line-height: 1.7;
 }
 
-header{
-    padding: 1rem 0;
-    background-color: transparent;
-    border-bottom: 1px solid rgba(225, 225, 225, 0.1);
-    position: fixed;
-    width: 100%;
-    z-index: 3;
-}
+
+/* ------------------------- */
+/* ---- REUSABLE STYLES ---- */
+/* ------------------------- */
+
 
 .container{
     max-width: 1140px;
@@ -45,81 +42,6 @@ header{
     justify-content: space-between;
     align-items: center;
 }
-
-
-/* ---- hamburger menu ---- */
-
-#logo{
-    font-family: var(--font-family-R);
-    font-size: 1.7rem;
-    font-weight: 800;
-    color: #fff;
-    text-decoration: none;
-    position: relative;
-    top: 4px;
-    padding-bottom: 8px;
-}
-
-/* .nav-menu{
-    display: flex;
-} */
-
-.hamburger-menu{
-    background-color: transparent;
-    border: 1px solid #fff;
-    padding: 3px 5px;
-    width: 30px;
-    cursor: pointer;
-    margin-top: 10px;
-    display: none;
-}
-
-.hamburger-menu .strip{
-    display: block;
-    height: 1px;
-    background-color: #fff;
-    margin: 4px 0;
-}
-
-header ul{
-    list-style-type: none;
-}
-
-header ul li{
-    display: inline-block;
-    margin: 0 15px;
-}
-
-#close-flyout{
-    display: none;
-}
-
-header ul li a{
-    color: #999;
-    font-size: 16px;
-    text-decoration: none;
-}
-
-.active{
-    color: #fff;
-}
-
-header ul.is-sticky li a{
-    color: #000;
-}
-
-header ul li a:hover,
-header ul li a:active{
-    color: #fff;
-}
-
-header ul.is-sticky li a:hover,
-header ul.is-sticky li a.active{
-    color: #f69314;
-}
-
-
-/* end header */
 
 h1, h2{
     font-weight: 800;
@@ -158,7 +80,92 @@ p{
 }
 
 
-/* ---- hero ---- */
+/* ---------------- */
+/* ---- HEADER ---- */
+/* ---------------- */
+
+
+header{
+    padding: 1rem 0;
+    background-color: transparent;
+    border-bottom: 1px solid rgba(225, 225, 225, 0.1);
+    position: fixed;
+    width: 100%;
+    z-index: 3;
+}
+
+#logo{
+    font-family: var(--font-family-R);
+    font-size: 1.7rem;
+    font-weight: 800;
+    color: #fff;
+    text-decoration: none;
+    position: relative;
+    top: 4px;
+    padding-bottom: 8px;
+}
+
+header ul{
+    list-style-type: none;
+}
+
+header ul li{
+    display: inline-block;
+    margin: 0 15px;
+}
+
+header ul li a{
+    color: #999;
+    font-size: 16px;
+    text-decoration: none;
+}
+
+.active{
+    color: #fff;
+}
+
+header ul.is-sticky li a{
+    color: #000;
+}
+
+header ul li a:hover,
+header ul li a:active{
+    color: #fff;
+}
+
+header ul.is-sticky li a:hover,
+header ul.is-sticky li a.active{
+    color: #f69314;
+}
+
+/* ---- hamburger menu ---- */
+
+.hamburger-menu{
+    background-color: transparent;
+    border: 1px solid #fff;
+    padding: 3px 5px;
+    width: 30px;
+    cursor: pointer;
+    margin-top: 10px;
+    display: none;
+}
+
+.hamburger-menu .strip{
+    display: block;
+    height: 1px;
+    background-color: #fff;
+    margin: 4px 0;
+}
+
+#close-flyout{
+    display: none;
+}
+
+
+/* ------------------------ */
+/* ---- HERO CONTAINER ---- */
+/* ------------------------ */
+
 
 #hero{
     position: absolute;
@@ -167,6 +174,8 @@ p{
     z-index: 1;
     height: 100%;
     width: 100%;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(https://assets.site-static.com/userFiles/1326/image/Community_Images/modernmalibu.jpg);
+    background-size: cover;
 }
 
 #hero .fade{
@@ -207,7 +216,10 @@ p{
 }
 
 
-/* ---- how it works ---- */
+/* ---------------------- */
+/* ---- HOW IT WORKS ---- */
+/* ---------------------- */
+
 
 #how-it-works{
     padding: 3rem 0;
@@ -233,21 +245,12 @@ p{
     color: #f69314;
     font-size: 35px;
 }
-/* .fa > img{
-    height: 35px;
-    color: #f69314;
-}
-
-.fas > img {
-    height: 35px;
-}
-
-.fa{
-    height: fit-content;
-} */
 
 
-/* ---- properties ---- */
+/* -------------------- */
+/* ---- PROPERTIES ---- */
+/* -------------------- */
+
 
 #properties{
     margin: 4rem 0 8rem;
@@ -268,41 +271,38 @@ p{
     right: 80px;
     top: 18px;
     color: #999;
+    z-index: 1;
 }
 
-#properties-slider .slick-arrow{
+.container button.slick-arrow{
     color: #000;
     position: absolute;
-    top: -78px;
-    right: 0;
+    top: -68px;
+    right: 0px;
     text-transform: uppercase;
     letter-spacing: 0.1rem;
+    font-size: 1rem;
     text-decoration: none;
-}
-
-.slick{
-    width: 100%;
     margin: auto;
 }
 
-/* #properties-slider div{
-    /* margin: 10px; */
-    /* padding: 10px; 
-} */
-
-#properties-slider .slick-next,
 #properties-slider .slick-prev{
-    right: 80px;
-    background-color: #f69314;
+    left: calc(100% - 22.5rem);
 }
 
-#properties-slider .slick-slide{
+#properties-slider .slick-next{
+    left: calc(100% - 8rem);
+    background-color: transparent;
+}
+
+#properties-slider div{
     margin: 0 10px !important;
 }
 
 #properties-slider img{
     height: 500px; 
     display: block;
+    border: solid 8px #fff;
 }
 
 #properties-slider .property-details{
@@ -321,27 +321,27 @@ p{
     padding-right: 15px;
 }
 
-#properties-slider span.baths {
+#properties-slider span.baths{
     padding-left: 10px;
 }
 
-#properties-slider span.sqft {
+#properties-slider span.sqft{
     padding-right: 0;
     padding-left: 10px;
 }
 
 #properties-slider span.beds,
-#properties-slider span.baths {
+#properties-slider span.baths{
     border-right: 1px solid #888;
 }
 
-#properties-slider .property-details address {
+#properties-slider address{
     font-size: 0.8rem;
     font-style: normal;
     margin-top: 0.5rem;
 }
 
-#properties button.rounded {
+#properties button.rounded{
     display: block;
     margin: 2rem auto 0;
     width: 350px;
@@ -359,7 +359,10 @@ button.rounded{
 }
 
 
-/* ---- agents ---- */
+/* ---------------- */
+/* ---- AGENTS ---- */
+/* ---------------- */
+
 
 #agents{
     margin: 4rem 0 6rem;
@@ -399,14 +402,16 @@ button.rounded{
 }
 
 
-/* ---- the best ---- */
+/* ------------------ */
+/* ---- THE BEST ---- */
+/* ------------------ */
+
 
 #the-best {
     margin: 2rem 0;
 }
 
 #the-best .flex > img {
-    /* height: 85vh; */
     width: 47%;
 }
 
@@ -424,7 +429,10 @@ button.rounded{
 }
 
 
-/* ----- services ---- */
+/* ------------------- */
+/* ----- SERVICES ---- */
+/* ------------------- */
+
 
 #services {
     background: #f8f9fa;
